# PokerRL

./: .gitignore  BayesianCfr.py  PokerKitTest.ipynb  README.md  blueprint.pkl  blueprint_strategy.pkl  depthLimitedSolver.py  enhanced_blueprint_strategy.pkl  environment.yml  game_state.py  pyproject.toml  requirements.txt  slumbotTest.py  state.py  trainCFR.py  utilities.py
CFRCode/: CFRNode.py  depthLimitedCFR.py  depthLimitedSolver.py  main.py  my_blueprint.pkl  opponentModel.py  pokerAgent.py  pokerGameState.py  selfPlay.py
CFR_Implementation_Slumbot/: BayesianHoldem.py  CFRNode.py  PokerProject.ipynb  SelfPlayPokerGame.py  card.py  deck.py  pokerAgent.py  train.py
CFR_code/: blueprint.pkl  my_blueprint.pkl.1742496107.bak  my_blueprint.pkl.1742496108.bak  my_blueprint.pkl.1742496109.bak  my_blueprint.pkl.1742496110.bak  my_blueprint.pkl.1742496122.bak  my_blueprint.pkl.1742496123.bak  my_blueprint.pkl.1742496124.bak  my_blueprint.pkl.1742496128.bak  my_blueprint.pkl.1742496129.bak  pokerAgent.py
models/BayesianHoldem/: BayesianHoldem.py  BayesianHoldemTest.ipynb  CheckpointTester.py  GameRepresentations.py  PolyakSelfPlayPokerGame.py  SelfPlayPokerGame.py  VanillaSelfPlayPokerGame.py  test.ipynb  utilities.py
models/PyStack/: README.md  pokerrl_env_slurm.yaml
models/PyStack/scripts/: convert_npy_to_tfrecords.py  train_nn.py  (+5 more)
models/benchmarking/: DeepStackBenchmark.py
src/: blueprint_basic.py  blueprint_improved.py  browse.py  check-tar.py  extract.py  utils.py
src/Essai/: depthLimitedCFR.py  handEvaluator.py  main.py
training_scripts/: test_script.py
(+11 files in other folders)
